--- a/assets/sass/habit.scss
+++ b/assets/sass/habit.scss
@@ -64,6 +64,9 @@
     display: flex;
     margin-top: 7px;
     margin-bottom: 7px;
+    :hover {
+      background-color: orangered;
+    }
   }
 }
 
